<resources>
    <string name="app_name">Combustível Flex</string>
    <string name="hint_gasoline">Digite o valor da gasolina</string>
    <string name="hint_ethanol">Digite o valor do etanol</string>
    <string name="btn_calculate">Calcular</string>
    <string name="btn_clear">Limpar</string>
    <string name="enter_values">Digite os valores.</string>
    <string name="enter_valid_values">Digite valores válidos.</string>
    <string name="enter_both_consumptions">Digite o consumo na gasolina e no etanol, ou deixe os dois vazios.</string>
    <string name="consumption_prefix">Meu carro faz</string>
    <string name="gasoline_consumption_suffix">km/L na gasolina.</string>
    <string name="ethanol_consumption_suffix">km/L no etanol.</string>
    <string name="result_title">O melhor combustível para o seu carro é:</string>
    <string name="result_ethanol">ETANOL</string>
    <string name="result_gasoline">GASOLINA</string>
    <string name="savings_title">Economia estimada:</string>
    <string name="btn_recalculate">RECALCULAR</string>
    <string name="invalid_result">Volte e digite valores válidos.</string>
    <string name="result_car_description">Carro</string>
    <string name="road_description">Estrada</string>
    <string name="gas_station_description">Posto de combustível</string>
    <string name="admob_app_id">ca-app-pub-1199102836233471~8079530547</string>
    <string name="new_home_title">COMBUSTÍVEL FLEX</string>
    <string name="new_home_title_fuel">COMBUSTÍVEL</string>
    <string name="new_home_title_flex">FLEX</string>
    <string name="new_home_subtitle">Qual é o melhor combustível para o seu carro?</string>
    <string name="new_gasoline_price_label">Preço da gasolina</string>
    <string name="new_ethanol_price_label">Preço do etanol</string>
    <string name="new_price_hint">R$ 0,00</string>
    <string name="new_gasoline_initial">G</string>
    <string name="new_ethanol_initial">E</string>
    <string name="new_consumption_title">Meu carro faz</string>
    <string name="new_consumption_hint">0,0</string>
    <string name="new_gasoline_consumption_caption">km/L\nna gasolina</string>
    <string name="new_ethanol_consumption_caption">km/L\nno etanol</string>
    <string name="new_tab_home">Início</string>
    <string name="new_tab_history">Histórico</string>
    <string name="new_tab_calcular">Calcular</string>
    <string name="new_tab_stations">Postos</string>
    <string name="new_tab_more">Mais</string>
    <string name="new_result_title">O melhor combustível\npara o seu carro é:</string>
    <string name="new_comparison_title">Comparativo de custo por km</string>
    <string name="new_history_title">Histórico de cálculos</string>
    <string name="new_history_subtitle">Últimos 25 cálculos realizados neste aparelho.</string>
    <string name="new_history_empty">Nenhum cálculo salvo ainda.</string>
    <string name="new_history_savings_label">Economia: %1$s</string>
    <string name="new_history_prices_format">Gasolina %1$s • Etanol %2$s</string>
    <string name="new_history_consumption_format">Consumo: %1$.2f km/L gasolina • %2$.2f km/L etanol</string>
    <string name="savings_per_liter_format">%1$s por litro</string>
    <string name="savings_per_km_format">%1$s por km</string>
    <string name="cost_per_km_format">%1$s/km</string>
    <string name="new_start_calculate_title">Calcular combustível</string>
    <string name="new_start_calculate_subtitle">Veja qual opção é mais econômica para você</string>
    <string name="new_start_history_subtitle">Acompanhe seus cálculos anteriores</string>
    <string name="new_start_stations_title">Postos próximos</string>
    <string name="new_start_stations_subtitle">Encontre postos de combustível perto de você</string>
    <string name="new_start_tips_title">Dicas de economia</string>
    <string name="new_start_tips_subtitle">Aprenda a economizar combustível no dia a dia</string>
    <string name="new_more_tips_subtitle">Aprenda a economizar combustível no dia a dia</string>
    <string name="new_start_settings_title">Configurações</string>
    <string name="new_start_settings_subtitle">Personalize suas preferências e o aplicativo</string>
    <string name="new_start_open_option">Abrir opção</string>
    <string name="new_badge_new">Novo</string>
    <string name="new_feature_coming_soon">Funcionalidade em breve.</string>
    <string name="new_stations_back">Voltar</string>
    <string name="new_stations_hero_description">Ilustração de posto de combustível próximo</string>
    <string name="new_stations_badge">EM BREVE</string>
    <string name="new_stations_headline">Novidade chegando!</string>
    <string name="new_stations_description">Em breve você poderá encontrar os melhores postos perto de você e economizar ainda mais no abastecimento.</string>
    <string name="new_stations_nearby_title">Postos perto de você</string>
    <string name="new_stations_nearby_subtitle">Localize os postos mais próximos com facilidade.</string>
    <string name="new_stations_best_price_title">Melhor preço</string>
    <string name="new_stations_best_price_subtitle">Compare preços e escolha sempre a melhor opção.</string>
    <string name="new_stations_routes_title">Rotas rápidas</string>
    <string name="new_stations_routes_subtitle">Veja o caminho mais rápido até o posto escolhido.</string>
    <string name="new_tips_title">Dicas de economia</string>
    <string name="new_tip_tire_title">Mantenha os pneus calibrados</string>
    <string name="new_tip_tire_subtitle">Pneus calibrados podem economizar até 10% de combustível.</string>
    <string name="new_tip_acceleration_title">Evite acelerações bruscas</string>
    <string name="new_tip_acceleration_subtitle">Acelerações suaves podem reduzir o consumo em até 20%.</string>
    <string name="new_tip_maintenance_title">Faça revisões periódicas</string>
    <string name="new_tip_maintenance_subtitle">Um carro revisado pode economizar até 15% de combustível.</string>
    <string name="new_tip_ac_title">Use o ar-condicionado com moderação</string>
    <string name="new_tip_ac_subtitle">O ar-condicionado pode aumentar o consumo em até 20%.</string>
    <string name="new_settings_unit_title">Unidade de medida</string>
    <string name="new_settings_unit_liter">R$/L (litro)</string>
    <string name="new_settings_unit_km">R$/km</string>
    <string name="new_settings_default_consumption_title">Consumo padrão do meu carro</string>
    <string name="new_settings_gasoline_label">Gasolina</string>
    <string name="new_settings_ethanol_label">Etanol</string>
    <string name="new_settings_consumption_value">%1$s km/L</string>
    <string name="new_settings_not_configured">Configurar</string>
    <string name="new_settings_consumption_dialog_message">Digite o consumo em km/L.</string>
    <string name="new_settings_notifications">Notificações</string>
    <string name="new_settings_notifications_denied">Permissão de notificações não concedida.</string>
    <string name="new_settings_price_reminder">Lembrete para revisão de preços</string>
    <string name="new_settings_rate">Avaliar o app</string>
    <string name="new_settings_share">Compartilhar com amigos</string>
    <string name="new_settings_share_title">Compartilhar app</string>
    <string name="new_settings_share_message">Seu amigo quer que você também economize na hora de abastecer.\n\n%1$s</string>
    <string name="new_settings_share_manual_title">Compartilhar texto</string>
    <string name="new_settings_share_manual_message">Não encontramos um app para compartilhar neste aparelho. Copie o texto abaixo e envie manualmente.</string>
    <string name="new_settings_copy_text">Copiar texto</string>
    <string name="new_settings_share_copied">Texto copiado.</string>
    <string name="new_settings_about">Sobre o Combustível Flex</string>
    <string name="new_settings_version_format">Versão %1$s</string>
    <string name="new_home_update_defaults_title">Atualizar consumo padrão?</string>
    <string name="new_home_update_defaults_message">Os consumos informados são diferentes dos valores salvos em Configurações. Deseja substituir os valores salvos?</string>
    <string name="new_home_update_defaults_yes">Substituir</string>
    <string name="new_home_update_defaults_no">Agora não</string>
    <string name="new_settings_about_dialog_message">Calculadora de combustível para carros flex. Descubra se é mais econômico abastecer com gasolina ou etanol com base nos preços e no consumo do seu carro.\n\nVersão %1$s</string>
    <string name="new_history_clear_button">Limpar</string>
    <string name="new_history_clear_confirm_title">Limpar histórico?</string>
    <string name="new_history_clear_confirm_message">Todos os cálculos salvos serão apagados. Esta ação não pode ser desfeita.</string>
    <string name="new_history_clear_confirm_yes">Limpar</string>
    <string name="stations_current_location">Localização atual</string>
    <string name="stations_gasoline_common">Gasolina comum</string>
    <string name="stations_ethanol">Etanol</string>
    <string name="stations_see_map">VER NO MAPA</string>
    <string name="stations_loading">Buscando postos próximos…</string>
    <string name="stations_empty">Nenhum posto encontrado próximo a você.</string>
    <string name="stations_empty_title">Nenhum posto encontrado</string>
    <string name="stations_empty_subtitle">Não há postos cadastrados em um raio de 5 km da sua localização atual.\n\nToque em \"Localização atual\" para tentar novamente.</string>
    <string name="stations_error_location">Não foi possível obter a localização.</string>
    <string name="stations_error_firestore">Erro ao buscar postos. Verifique sua conexão.</string>
    <string name="stations_permission_denied">Permissão de localização necessária para mostrar postos próximos.</string>
    <string name="stations_price_format">R$ %1$s</string>
    <string name="stations_distance_meters">%1$d m</string>
    <string name="stations_distance_km">%1$s km</string>
    <string name="detail_back">Voltar</string>
    <string name="detail_distance_from_you">%1$s de você</string>
    <string name="detail_gasoline_label">Gasolina</string>
    <string name="detail_ethanol_label">Etanol</string>
    <string name="detail_address_label">Endereço</string>
    <string name="detail_address_unavailable">Endereço não disponível</string>
    <string name="detail_services_label">Serviços disponíveis</string>
    <string name="detail_service_oil">Troca de óleo</string>
    <string name="detail_service_convenience">Conveniência</string>
    <string name="maintenance_oil_change_title">Troca de óleo</string>
    <string name="oil_change_items_title">Itens trocados na última troca</string>
    <string name="oil_change_engine_oil">Óleo do motor</string>
    <string name="oil_change_oil_filter">Filtro de óleo</string>
    <string name="oil_change_air_filter">Filtro de ar</string>
    <string name="oil_change_cabin_filter">Filtro de cabine</string>
    <string name="oil_change_history_btn">Ver histórico</string>
    <string name="oil_change_date_label">Data da troca</string>
    <string name="oil_change_date_hint">DD/MM/AAAA</string>
    <string name="oil_change_km_label">Quilometragem atual</string>
    <string name="oil_change_items_changed_label">O que foi trocado?</string>
    <string name="oil_change_interval_label">Intervalo para próxima troca</string>
    <string name="oil_change_months">meses</string>
    <string name="oil_change_km_hint">ex: 45.200</string>
    <string name="oil_change_confirm_title">Troca registrada\ncom sucesso!</string>
    <string name="oil_change_confirm_subtitle">Sua manutenção está em dia.</string>
    <string name="oil_change_back_to_summary">Voltar para resumo</string>
    <string name="oil_change_km_current_summary">Km atual</string>
    <string name="oil_change_next_change_summary">Próxima troca</string>
    <string name="oil_change_no_items_selected">Nenhum item selecionado</string>
</resources>