<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/gas_station_description"
        android:src="@drawable/ic_local_gas_station_black_48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/result_title"
        android:textColor="@color/legacy_blue"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textColor="@color/legacy_orange"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/result_car_image"
        android:layout_width="75dp"
        android:layout_height="27dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/result_car_description"
        android:src="@drawable/car" />

    <TextView
        android:id="@+id/savings_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/savings_title"
        android:textColor="@color/legacy_blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/savings_value_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textColor="@color/legacy_orange"
        android:textSize="20sp" />

    <Button
        android:id="@+id/recalculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:background="@color/legacy_blue"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/btn_recalculate"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <FrameLayout
        android:id="@+id/bottom_car_ad_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:layout_weight="1"
        android:minHeight="50dp" />
</LinearLayout>
